# ecce

./: .gitignore  LICENSE.md  Makefile  README-ECCE  README.md  nmecce_debug.php  pl_out.php
auto_tests/: test_ciao
convex_hull/: Makefile  convex_analyser.pl
ecce_benchmarks/: advisor.bm  advisor.bm.bor  benchmarkset.bs  benchmarkset_slicing.bs  doubleapp.bm  flip.bm  liftsolve.app.bm  liftsolve.db1.bm  liftsolve.lmkng.bm  matchapp.bm  maxlength.bm  ng_unify.bm  partialevaluator.bm  qsort_ecce.pl  regexp.r1.bm  regexp.r3.bm  regexp1.bm  rev.bm  revlast.bm  revlast_simple.bm  ssuply.bm  time.pl  transpose.bm
ecce_benchmarks/ecce_out/: compile_bm.pl
ecce_benchmarks/martin/: advisor.pro  app.pl  applast.pl  applast.pro  calc_chtree_martin.pro  doubleapp.pl  grammar.pl  groundunify.pl  groundunify.pro  local.pl  map.pl  match.kmp.bm  matchapp.pl  maxlength.pro  regexp1.pl  regexp1.pro  relative.pro  remove.pl  remove.pro  remove2.pl  remove2.pro  rev_acc_type.pl  rotateprune.pro  transpose.pro  upto.pro
ecce_benchmarks/orig/: applast.pro  compile_orig.pl  doubleapp.pro  flip.pro  grammar.pro  matchapp.pro  partialevaluator.pro  rev_acc_type.pro  revlast.pro  rotateprune.pro  upto.pro
ecce_examples/: grandmother.pl  imp_int.pl  knows_logic.pl  leechinsoon.pl  mymember.pl  nonterm.pl  prop_int_neg.pl  rultest.even_odd.pl  rultest.lopstr01.pl  rultest.process2.pl  rultest.process3.pl  rultest.test4.pl  rultest.unsafe.pl  rultests.pl  sharing_test.pl  simplify.pl  solve_offline_online.pl  verysimple2.pl
ecce_examples/Termination/: times_plus.pl
ecce_examples/dbaccess/: cycle_q4.pl
ecce_examples/demo/: apdtest.ecce.results  bsets.pl  diff-integrate.pl  ho.pl
ecce_examples/petri-nets/: basicME.logen.pl  basicME.pl  clarke_mutex.P  csm.pl  ctl.P  dekker.pl  efm.pl  fms.pl  xsb_model_check.P
ecce_examples/sat_codish/: Makefile  sum_128_16_po.pl  sum_128_32_po.pl  sum_128_64_po.pl  sum_32_8_po.pl
ecce_examples/slicing/: applen.pl  ctl_trace.slice
ecce_source/: JavaPrologFlag.java  Makefile  benchmark.pl  bimtools.pl  c  calc_chtree.pl  chtree_tools.pl  code_generator.pl  code_generator_isabelle.pl  dead_code_elimination.pl  depth_bound.pl  determinate_post_unfold.pl  dot_generator.pl  dynpreds.pl  ecce_bim.pl  ecce_ciao_entry.pl  ecce_cli.pl  ecce_main.pl  ecce_no_rt.pl  ecce_no_rt_mod.pl  ecce_sicstus.pl  ecce_tcltk.pl  ecce_tcltk.tcl  front_end.pl  global_tree.pl  homeomorphic.pl  index_tools.pl  japro.pl  main_functions.pl  modes.pl  msv_analysis.pl  multi_meta.pl  parameters.pl  parametric_files.pl  post_processor.pl  raf_analysis.pl  run-mecce-sicstus  s  self_check.pl  sicstus_expansion.pl  (+5 more)
ecce_source/abstract/: abstract.conjsplit-contig.pl  abstract.conjsplit-termsize.pl  abstract.conjsplit-tszcntig.pl  abstract.conjsplit.pl  abstract.eco.pl  abstract.msgchtree.pl  abstract.naivemsg.pl  abstract.pl  abstract.precisemsgchtree.pl  abstract.rul-std.pl  abstract.rul.pl
ecce_source/abstractpd/: calc_chtree_pd.pl  flow_analysis.pl
ecce_source/bimtools/: Environments.pl  ciao_specific.pl  claus_database.pl  debugging.pl  env_unify.oldbim.pl  functions.pl  gensym.pl  html_output.pl  makeflat.pl  makeiff.defs.pl  makeiff.pl  msg.pl  prepost.withcheck.pl  sicstus_specific.pl  stdlists.pl  typechecker.pl
ecce_source/bottomUp/: adhoc_bup.pl  bottomUp.pl  johnsTool.pl  test.pl
ecce_source/check_instance_of/: check_instance_of.instchtr.pl  check_instance_of.pl  check_instance_of.rul.pl
ecce_source/constraints/: constraints_clpfd.pl
ecce_source/more_specific/: more_specific.clpfd.pl  more_specific.conj-msv.pl  more_specific.envunify.pl  more_specific.functionality.pl  more_specific.pl  more_specific.rul.pl  more_specific.simple-msv.pl  mst.pl
ecce_source/neg_solve/: neg_solve.always.pl  neg_solve.any.pl  neg_solve.pl  (+2 more)
experimental/: ecce_new.pl  homeomorphic.pl  msg.pl  prolog_reader.pl  test.pl
tests/: run_tests.csh
trunk/: nmecce.php
www/: asap-online-demo.css  asap-online-demo.js  index.php  index_debug.php  mecce.css  mecce.js  nmecce.php  pl_out.php  runtime_error.php
www/CiaoDE/ciao/library.development/proTcXl2.1/other/: Makefile.in  config.status  configure  configure.in  etk.pl  misc_eclipse.pl  qtk.pl  stk.pl
(+2499 files in other folders)
